# ui-labelling-evaluation

./: README.md  evaluation_results.json  local.yml  main.py  makefile  pyproject.toml
cmd/: server.py
dataset/ground_truth/: Screenshot_2025-07-19_000.json  Screenshot_2025-07-19_001.json  Screenshot_2025-07-19_002.json  Screenshot_2025-07-19_003.json  Screenshot_2025-07-19_004.json  Screenshot_2025-07-19_005.json  Screenshot_2025-07-19_006.json  Screenshot_2025-07-19_007.json  Screenshot_2025-07-19_008.json  Screenshot_2025-07-19_009.json  Screenshot_2025-07-19_010.json  Screenshot_2025-07-19_011.json  Screenshot_2025-07-19_012.json  Screenshot_2025-07-19_013.json  Screenshot_2025-07-19_014.json  Screenshot_2025-07-19_015.json  Screenshot_2025-07-19_016.json  Screenshot_2025-07-19_017.json  Screenshot_2025-07-19_018.json  Screenshot_2025-07-19_019.json  Screenshot_2025-07-19_020.json  Screenshot_2025-07-19_021.json  Screenshot_2025-07-19_022.json  Screenshot_2025-07-19_023.json  Screenshot_2025-07-19_024.json  Screenshot_2025-07-19_025.json  Screenshot_2025-07-19_026.json  Screenshot_2025-07-19_027.json  Screenshot_2025-07-19_028.json  Screenshot_2025-07-19_029.json  Screenshot_2025-07-19_030.json  Screenshot_2025-07-19_031.json  Screenshot_2025-07-19_032.json  Screenshot_2025-07-19_033.json  Screenshot_2025-07-19_034.json  Screenshot_2025-07-19_035.json  Screenshot_2025-07-19_036.json  Screenshot_2025-07-19_037.json  Screenshot_2025-07-19_038.json  Screenshot_2025-07-19_039.json  (+60 more)
dataset/prediction/: Screenshot_2025-07-19_000.json  (+99 more)
scripts/: run.sh  server.sh
(+35 files in other folders)
