[project]
name = "external-proxy"
version = "0.1.0"
description = ""
authors = [
    {name = "tonible14012002",email = "namanh14.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "redis[hiredis] (>=5.2.1,<6.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "email-validator (>=2.2.0,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
