[project]
name = "external-proxy"
version = "0.1.0"
description = ""
authors = [
    {name = "tonible14012002",email = "namanh14.work@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "orjson (>=3.10.16,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
